--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,14 @@
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  margin: 80px auto 0 auto;
+  max-width: 1200px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.toolbar-container{
+  margin :auto 1000px;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +24,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
