--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -6,8 +5,11 @@
   margin: 80px auto 0 auto;
   max-width: 1200px;
 }
-.toolbar-container{
-  margin :auto 1000px;
+.toolbar-container {
+  margin: auto 1000px;
+}
+a {
+  text-decoration: none;
 }
 .App-header {
   min-height: 100vh;
@@ -17,5 +19,3 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
 }
-
-
